--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,10 @@ body {
     min-height: 100vh;
     color: var(--text-color);
     line-height: 1.6;
+    overflow-x: hidden;
 }
+html{
+    overflow-x: hidden;}
 
 /* Landing Page */
 .hero {
